tests/invalid/subscript_aug_assign_div_type_change/main.py
def main() -> None:
    xs: list[int] = [10]
    xs[0] /= 2
